navbar list flexbox added

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!-- <script defer src="js/index.js"></script> -->
   </head>
   <header>
-    <nav>
-      <ul class="navbar">
+    <nav class="navbar">
+      <ul class="links-container">
         <li><a href="#welcome">Welcome</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
