profile picture added to the navbar + made it circular

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
   </head>
   <header>
     <nav class="navbar">
+      <div id="profile-picture-container">
+        <img
+          id="profile-picture"
+          src="images/pexels-simon-robben-614810.jpg"
+          alt="Adam Young"
+        />
+      </div>
       <ul class="links-container">
         <li><a href="#welcome">Welcome</a></li>
         <li><a href="#about">About</a></li>
