aligned items to the center in their flexboxes in navbar

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           src="images/pexels-simon-robben-614810.jpg"
           alt="Adam Young"
         />
+        <p>Adam Young</p>
       </div>
       <ul class="links-container">
         <li><a href="#welcome">Welcome</a></li>
