added on hover on profile picture section and linked to welcome section

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
   <header>
     <nav class="navbar">
       <div id="profile-picture-container">
-        <img
-          id="profile-picture"
-          src="images/pexels-simon-robben-614810.jpg"
-          alt="Adam Young"
-        />
-        <p>Adam Young</p>
+        <a href="#welcome">
+          <img
+            id="profile-picture"
+            src="images/pexels-simon-robben-614810.jpg"
+            alt="Adam Young"
+          />
+          <p>Adam Young</p>
+        </a>
       </div>
       <ul class="links-container">
         <li><a href="#welcome">Welcome</a></li>
