added hero image for welcome page

--- a/index.html
+++ b/index.html
@@ -18,27 +18,36 @@
 
     <!-- <script defer src="js/index.js"></script> -->
   </head>
-  <header>
-    <nav class="navbar">
-      <div id="profile-picture-container">
-        <a href="#welcome">
-          <img
-            id="profile-picture"
-            src="images/pexels-simon-robben-614810.jpg"
-            alt="Adam Young"
-          />
-          <p>Adam Young</p>
-        </a>
-      </div>
-      <ul class="links-container">
-        <li><a href="#welcome">Welcome</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <body>
-    <h1>Website Template</h1>
-  </body>
+  <div id="main-grid">
+    <header>
+      <nav class="navbar">
+        <div id="profile-picture-container">
+          <a href="#welcome">
+            <img
+              id="profile-picture"
+              src="images/profilepicture.jpg"
+              alt="Adam Young"
+            />
+            <p>Adam Young</p>
+          </a>
+        </div>
+        <ul class="links-container">
+          <li><a href="#welcome">Welcome</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <body>
+      <section id="welcome">
+        <div class="hero-image">
+          <div class="hero-text">
+            <h1>Hey! I'm Adam Young</h1>
+            <p><em>An Aspiring Web Developer</em></p>
+          </div>
+        </div>
+      </section>
+    </body>
+  </div>
 </html>
