no hero image overlap with navbar and responsive text

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
           </div>
         </div>
       </section>
+
+      <section id="about"></section>
+
+      <section id="projects"></section>
+
+      <section id="contact"></section>
+
+      <footer></footer>
     </body>
   </div>
 </html>
