added html layout

--- a/index.html
+++ b/index.html
@@ -49,11 +49,31 @@
         </div>
       </section>
 
-      <section id="about"></section>
+      <section id="about">
+        <h2>My Journey</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
+          nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
+          eaque tempore dignissimos quibusdam quia ea incidunt! Nihil recusandae
+          itaque adipisci.
+        </p>
+        <img src="images/favicon.png" />
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
+          nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
+          eaque tempore dignissimos quibusdam quia ea incidunt! Nihil recusandae
+          itaque adipisci.
+        </p>
+        <img src="images/favicon.png" />
+      </section>
 
-      <section id="projects"></section>
+      <section id="projects">
+        <h2>Portfolio</h2>
+      </section>
 
-      <section id="contact"></section>
+      <section id="contact">
+        <h2>Contact</h2>
+      </section>
 
       <footer></footer>
     </body>
