html for contact section

--- a/index.html
+++ b/index.html
@@ -69,10 +69,35 @@
 
       <section id="projects">
         <h2>Portfolio</h2>
+        <h3>Here you can see some of the projects I have been working on:</h3>
       </section>
 
       <section id="contact">
         <h2>Contact</h2>
+        <p>Get in touch!</p>
+        <div class="contact-links">
+          <a
+            href="https://www.freecodecamp.org/adamyoungy678"
+            target="_blank"
+            class="btn contact-details"
+            ><i class="fa fa-free-code-camp"></i> freeCodeCamp</a
+          >
+          <a
+            href="https://github.com/youngy247"
+            target="_blank"
+            class="btn contact-details"
+            ><i class="fa fa-github"></i> GitHub</a
+          >
+          <a href="#" target="_blank" class="btn contact-details"
+            ><i class="fa fa-linkedin"></i> LinkedIn</a
+          >
+          <a
+            href="mailto:adamyoungy678@gmail.com"
+            target="_blank"
+            class="btn contact-details"
+            ><i class="fa fa-at"></i> Email
+          </a>
+        </div>
       </section>
 
       <footer></footer>
