--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="icon" href="images/favicon.png" sizes="192x192" />
     <link rel="shortcut icon" href="images/favicon.png" />
     <link rel="apple-touch-icon" href="images/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <!-- <script defer src="js/index.js"></script> -->
   </head>
