debugged missing #about div and centered

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         </div>
       </section>
 
-      <section id="about">
+      <div id="about">
+        <div class="about-container">
         <h2>My Journey</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
@@ -62,6 +63,8 @@
           itaque adipisci.
         </p>
         <img src="images/favicon.png" />
+    </div>
+    <div class="about-container">
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
           nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
@@ -69,6 +72,8 @@
           itaque adipisci.
         </p>
         <img src="images/favicon.png" />
+    </div>
+      </div>
       </section>
 
       <section id="projects">
