added same styling to about, projects and contact section

--- a/index.html
+++ b/index.html
@@ -53,27 +53,26 @@
         </div>
       </section>
 
-      <div id="about">
+      <section id="about">
         <div class="about-container">
-        <h2>My Journey</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
-          nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
-          eaque tempore dignissimos quibusdam quia ea incidunt! Nihil recusandae
-          itaque adipisci.
-        </p>
-        <img src="images/favicon.png" />
-    </div>
-    <div class="about-container">
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
-          nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
-          eaque tempore dignissimos quibusdam quia ea incidunt! Nihil recusandae
-          itaque adipisci.
-        </p>
-        <img src="images/favicon.png" />
-    </div>
-      </div>
+          <h2>My Journey</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
+            nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
+            eaque tempore dignissimos quibusdam quia ea incidunt! Nihil
+            recusandae itaque adipisci.
+          </p>
+          <img src="images/favicon.png" />
+        </div>
+        <div class="about-container">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
+            nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
+            eaque tempore dignissimos quibusdam quia ea incidunt! Nihil
+            recusandae itaque adipisci.
+          </p>
+          <img src="images/favicon.png" />
+        </div>
       </section>
 
       <section id="projects">
