--- a/index.html
+++ b/index.html
@@ -78,6 +78,45 @@
       <section id="projects">
         <h2>Portfolio</h2>
         <h3>Here you can see some of the projects I have been working on:</h3>
+        <div id="project1" class="project-container">
+          <h3>Project 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+            obcaecati voluptates reprehenderit doloremque debitis molestias, non
+            suscipit nihil illum aut quibusdam inventore expedita dolore
+            consectetur unde dicta voluptatibus a ipsum?
+          </p>
+          <img src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
+        </div>
+        <div id="project2" class="project-container">
+          <h3>Project 2</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+            maxime quia odio totam quis vitae facilis assumenda magnam tempora
+            officiis ex omnis amet molestiae non, ullam est illo inventore quas!
+          </p>
+          <img src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
+        </div>
+        <div id="project3" class="project-container">
+          <h3>Project 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+            quibusdam nihil. Minima mollitia exercitationem magni neque, enim
+            perspiciatis cupiditate? Earum, quasi! Reiciendis magnam,
+            consequuntur quo fuga earum eos iste qui.
+          </p>
+          <img src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
+        </div>
+        <div id="project4" class="project-container">
+          <h3>Project 4</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos maxime
+            quae minus ullam sit reiciendis nisi eius asperiores cum ducimus
+            tempora neque, deleniti labore mollitia ea rem, dolor, cupiditate
+            exercitationem!
+          </p>
+          <img src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
+        </div>
       </section>
 
       <section id="contact">
