new hero image for home page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <section id="welcome">
         <div class="hero-image">
           <div class="hero-text">
-            <h1>Hey! I'm Adam Young</h1>
+            <h1>Hey! I'm Adam</h1>
             <p><em>An Aspiring Web Developer</em></p>
           </div>
         </div>
