--- a/index.html
+++ b/index.html
@@ -86,8 +86,13 @@
             suscipit nihil illum aut quibusdam inventore expedita dolore
             consectetur unde dicta voluptatibus a ipsum?
           </p>
-          <img src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
+          <div>
+            <img src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
+            <button>Live</button>
+            <button>Github</button>
+          </div>
         </div>
+
         <div id="project2" class="project-container">
           <h3>Project 2</h3>
           <p>
@@ -95,7 +100,11 @@
             maxime quia odio totam quis vitae facilis assumenda magnam tempora
             officiis ex omnis amet molestiae non, ullam est illo inventore quas!
           </p>
-          <img src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
+          <div>
+            <img src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
+            <button>Live</button>
+            <button>Github</button>
+          </div>
         </div>
         <div id="project3" class="project-container">
           <h3>Project 3</h3>
@@ -105,7 +114,11 @@
             perspiciatis cupiditate? Earum, quasi! Reiciendis magnam,
             consequuntur quo fuga earum eos iste qui.
           </p>
-          <img src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
+          <div>
+            <img src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
+            <button>Live</button>
+            <button>Github</button>
+          </div>
         </div>
         <div id="project4" class="project-container">
           <h3>Project 4</h3>
@@ -115,7 +128,11 @@
             tempora neque, deleniti labore mollitia ea rem, dolor, cupiditate
             exercitationem!
           </p>
-          <img src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
+          <div>
+            <img src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
+            <button>Live</button>
+            <button>Github</button>
+          </div>
         </div>
       </section>
 
