--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             suscipit nihil illum aut quibusdam inventore expedita dolore
             consectetur unde dicta voluptatibus a ipsum?
           </p>
-          <div>
+          <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
             <button>Live</button>
             <button>Github</button>
@@ -100,7 +100,7 @@
             maxime quia odio totam quis vitae facilis assumenda magnam tempora
             officiis ex omnis amet molestiae non, ullam est illo inventore quas!
           </p>
-          <div>
+          <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
             <button>Live</button>
             <button>Github</button>
@@ -114,7 +114,7 @@
             perspiciatis cupiditate? Earum, quasi! Reiciendis magnam,
             consequuntur quo fuga earum eos iste qui.
           </p>
-          <div>
+          <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
             <button>Live</button>
             <button>Github</button>
@@ -128,7 +128,7 @@
             tempora neque, deleniti labore mollitia ea rem, dolor, cupiditate
             exercitationem!
           </p>
-          <div>
+          <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
             <button>Live</button>
             <button>Github</button>
