added first project stack logo

--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
             tempora neque, deleniti labore mollitia ea rem, dolor, cupiditate
             exercitationem!
           </p>
+
+          <i class="fa fa-html5 project-icon fa-lg"></i>
           <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
 
