added icons in a flex box next to project image

--- a/index.html
+++ b/index.html
@@ -129,10 +129,12 @@
             exercitationem!
           </p>
 
-          <i class="fa fa-html5 project-icon fa-lg"></i>
           <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
-
+            <div class="project-icon">
+              <i class="fa fa-html5 fa-lg"></i>
+              <i class="fa fa-html5 project-icon fa-lg"></i>
+            </div>
             <button>Live</button>
             <button>Github</button>
           </div>
