--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
           </p>
           <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
+            <div class="project-icon">
+              <i class="fa fa-html5 fa-lg"></i>
+              <i class="fa fa-html5 project-icon fa-lg"></i>
+            </div>
             <button>Live</button>
             <button>Github</button>
           </div>
@@ -102,6 +106,10 @@
           </p>
           <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
+            <div class="project-icon">
+              <i class="fa fa-html5 fa-lg"></i>
+              <i class="fa fa-html5 project-icon fa-lg"></i>
+            </div>
             <button>Live</button>
             <button>Github</button>
           </div>
@@ -116,6 +124,10 @@
           </p>
           <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
+            <div class="project-icon">
+              <i class="fa fa-html5 fa-lg"></i>
+              <i class="fa fa-html5 project-icon fa-lg"></i>
+            </div>
             <button>Live</button>
             <button>Github</button>
           </div>
