alligned icons to the center of their flexbox and added new css logo

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
             <div class="project-icon">
-              <i class="fa fa-html5 fa-lg"></i>
+              <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-html5 project-icon fa-lg"></i>
             </div>
             <button>Live</button>
@@ -107,7 +107,7 @@
           <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
             <div class="project-icon">
-              <i class="fa fa-html5 fa-lg"></i>
+              <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-html5 project-icon fa-lg"></i>
             </div>
             <button>Live</button>
@@ -125,7 +125,7 @@
           <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
             <div class="project-icon">
-              <i class="fa fa-html5 fa-lg"></i>
+              <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-html5 project-icon fa-lg"></i>
             </div>
             <button>Live</button>
@@ -144,8 +144,8 @@
           <div class="project-img-container">
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
             <div class="project-icon">
-              <i class="fa fa-html5 fa-lg"></i>
               <i class="fa fa-html5 project-icon fa-lg"></i>
+              <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
             <button>Live</button>
             <button>Github</button>
