decreased padding-bottom of project-image-container

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
             <div class="project-icon">
               <i class="fa fa-html5 project-icon fa-lg"></i>
-              <i class="fa fa-html5 project-icon fa-lg"></i>
+              <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
             <button>Live</button>
             <button>Github</button>
@@ -108,7 +108,7 @@
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
             <div class="project-icon">
               <i class="fa fa-html5 project-icon fa-lg"></i>
-              <i class="fa fa-html5 project-icon fa-lg"></i>
+              <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
             <button>Live</button>
             <button>Github</button>
@@ -126,7 +126,7 @@
             <img src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
             <div class="project-icon">
               <i class="fa fa-html5 project-icon fa-lg"></i>
-              <i class="fa fa-html5 project-icon fa-lg"></i>
+              <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
             <button>Live</button>
             <button>Github</button>
