spaced out contact links

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             href="https://www.freecodecamp.org/adamyoungy678"
             target="_blank"
             class="btn contact-details"
-            ><i class="fa fa-free-code-camp"></i> freeCodeCamp</a
+            ><i class="fa fa-slack"></i> Slack</a
           >
           <a
             href="https://github.com/youngy247"
