--- a/index.html
+++ b/index.html
@@ -157,10 +157,7 @@
         <h2>Contact</h2>
         <p>Get in touch!</p>
         <div class="contact-links">
-          <a
-            href="https://www.freecodecamp.org/adamyoungy678"
-            target="_blank"
-            class="btn contact-details"
+          <a href="" target="_blank" class="btn contact-details"
             ><i class="fa fa-slack"></i> Slack</a
           >
           <a
@@ -181,7 +178,7 @@
         </div>
       </section>
 
-      <footer></footer>
+      <footer>&copy; Adam Young 2023</footer>
     </body>
   </div>
 </html>
