contact logos now directly above their name

--- a/index.html
+++ b/index.html
@@ -158,22 +158,24 @@
         <p>Get in touch!</p>
         <div class="contact-links">
           <a href="" target="_blank" class="btn contact-details"
-            ><i class="fa fa-slack"></i> Slack</a
+            ><i class="fa fa-slack"></i> <br>Slack</a
           >
           <a
             href="https://github.com/youngy247"
             target="_blank"
             class="btn contact-details"
-            ><i class="fa fa-github"></i> GitHub</a
+            ><i class="fa fa-github"></i> <br>GitHub</a
           >
           <a href="#" target="_blank" class="btn contact-details"
-            ><i class="fa fa-linkedin"></i> LinkedIn</a
+            ><i class="fa fa-linkedin"></i> <br>LinkedIn</a
           >
           <a
             href="mailto:adamyoungy678@gmail.com"
             target="_blank"
             class="btn contact-details"
-            ><i class="fa fa-at"></i> Email
+            ><i class="fa fa-at">
+            
+            </i> </br>Email
           </a>
         </div>
       </section>
