added media queries for desktop and slightly altered hero image margin top for mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
               src="images/profilepicture.jpg"
               alt="Adam Young"
             />
-            <p>Adam Young</p>
+            <p>
+            Adam Young
+            </p>
           </a>
         </div>
         <ul class="links-container">
