changed profile picture container to same color as navbar

--- a/index.html
+++ b/index.html
@@ -26,15 +26,20 @@
     <header>
       <nav class="navbar">
         <div id="profile-picture-container">
+          
           <a href="#welcome">
+            <div>
             <img
               id="profile-picture"
               src="images/profilepicture.jpg"
               alt="Adam Young"
             />
-            <p>
+            </div>
+            <div>
+            <p id="profile-name">
             Adam Young
             </p>
+            </div>
           </a>
         </div>
         <ul class="links-container">
