max-width added for project imgs desktop version

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             consectetur unde dicta voluptatibus a ipsum?
           </p>
           <div class="project-img-container">
-            <img src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
+            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
             <div class="project-icon">
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
@@ -116,7 +116,7 @@
             officiis ex omnis amet molestiae non, ullam est illo inventore quas!
           </p>
           <div class="project-img-container">
-            <img src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
+            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
             <div class="project-icon">
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
@@ -134,7 +134,7 @@
             consequuntur quo fuga earum eos iste qui.
           </p>
           <div class="project-img-container">
-            <img src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
+            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
             <div class="project-icon">
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
@@ -153,7 +153,7 @@
           </p>
 
           <div class="project-img-container">
-            <img src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
+            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
             <div class="project-icon">
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
