added alternating column starts for projects 1-4

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <h2>Portfolio</h2>
         <h3>Here you can see some of the projects I have been working on:</h3>
         <div id="project1" class="project-container">
+          <div class="project-content2">
           <h3>Project 1</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
@@ -97,6 +98,7 @@
             suscipit nihil illum aut quibusdam inventore expedita dolore
             consectetur unde dicta voluptatibus a ipsum?
           </p>
+          </div>
           <div class="project-img-container">
             <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
             <div class="project-icon">
@@ -109,12 +111,14 @@
         </div>
 
         <div id="project2" class="project-container">
+          <div class="project-content1">
           <h3>Project 2</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
             maxime quia odio totam quis vitae facilis assumenda magnam tempora
             officiis ex omnis amet molestiae non, ullam est illo inventore quas!
           </p>
+          </div>
           <div class="project-img-container">
             <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
             <div class="project-icon">
@@ -126,6 +130,7 @@
           </div>
         </div>
         <div id="project3" class="project-container">
+          <div class="project-content2">
           <h3>Project 3</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
@@ -133,6 +138,7 @@
             perspiciatis cupiditate? Earum, quasi! Reiciendis magnam,
             consequuntur quo fuga earum eos iste qui.
           </p>
+        </div>
           <div class="project-img-container">
             <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
             <div class="project-icon">
@@ -144,6 +150,7 @@
           </div>
         </div>
         <div id="project4" class="project-container">
+          <div class="project-content1">
           <h3>Project 4</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos maxime
@@ -151,7 +158,7 @@
             tempora neque, deleniti labore mollitia ea rem, dolor, cupiditate
             exercitationem!
           </p>
-
+          </div>
           <div class="project-img-container">
             <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
             <div class="project-icon">
