--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Template</title>
+    <title>Adam's Portfolio</title>
 
     <meta name="description" content="Template HTML file" />
     <meta name="author" content="iO Academy" />
