updated meta tags in head

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <title>Adam's Portfolio</title>
 
-    <meta name="description" content="Template HTML file" />
-    <meta name="author" content="iO Academy" />
+    <meta name="description" content="Adam's Portfolio" />
+    <meta name="author" content="Adam Young" />
 
     <!-- <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/styles.css" />
