grouped nested sections in the about section

--- a/index.html
+++ b/index.html
@@ -67,22 +67,32 @@
       <section id="about">
         <h2>My Journey</h2>
         <div class="about-container">
+          <div class="about-content">
+          <h3>Introduction</h3>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
             nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
             eaque tempore dignissimos quibusdam quia ea incidunt! Nihil
             recusandae itaque adipisci.
           </p>
+          </div>
+          <div>
           <img src="images/favicon.png" />
         </div>
+        </div>
         <div class="about-container">
+          <div class="about-content">
+            <h3>Developer Journey</h3>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo vitae
             nobis minus, dolorem fuga voluptatibus nisi velit, laudantium totam
             eaque tempore dignissimos quibusdam quia ea incidunt! Nihil
             recusandae itaque adipisci.
           </p>
+          </div>
+          <div>
           <img src="images/favicon.png" />
+          </div>
         </div>
       </section>
 
