centered img containers in about section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             recusandae itaque adipisci.
           </p>
           </div>
-          <div>
+          <div class="about-img about-img1">
           <img src="images/favicon.png" />
         </div>
         </div>
@@ -90,7 +90,7 @@
             recusandae itaque adipisci.
           </p>
           </div>
-          <div>
+          <div class="about-img about-img2">
           <img src="images/favicon.png" />
           </div>
         </div>
