updated class selectors in about section to target imgs directly

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             recusandae itaque adipisci.
           </p>
           </div>
-          <div class="about-img about-img1">
-          <img src="images/favicon.png" />
+          <div class="about-img-container">
+          <img class="about-img1" src="images/favicon.png" />
         </div>
         </div>
         <div class="about-container">
@@ -90,8 +90,8 @@
             recusandae itaque adipisci.
           </p>
           </div>
-          <div class="about-img about-img2">
-          <img src="images/favicon.png" />
+          <div class="about-img-container">
+          <img class="about-img2" src="images/favicon.png" />
           </div>
         </div>
       </section>
