contact links added in flexbox for desktop

--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
+            <div class="button-container">
             <button>Live</button>
             <button>Github</button>
+            </div>
           </div>
         </div>
 
