added and styled dividers

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
       <section id="about">
         <h2>My Journey</h2>
+        <hr class="divider">
         <div class="about-container">
           <div class="about-content">
           <h3>Introduction</h3>
@@ -98,6 +99,7 @@
 
       <section id="projects">
         <h2>Portfolio</h2>
+        <hr class="divider">
         <h3>Here you can see some of the projects I have been working on:</h3>
         <div id="project1" class="project-container">
           <div class="project-content2">
@@ -185,6 +187,7 @@
 
       <section id="contact">
         <h2>Contact</h2>
+        <hr class="divider">
         <p>Get in touch!</p>
         <div class="contact-links">
           <a href="" target="_blank" class="btn contact-details"
