grouped all live and github buttons in div containers

--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
+            <div class="button-container">
             <button>Live</button>
             <button>Github</button>
+          </div>
           </div>
         </div>
         <div id="project3" class="project-container">
@@ -159,8 +161,10 @@
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
+            <div class="button-container">
             <button>Live</button>
             <button>Github</button>
+          </div>
           </div>
         </div>
         <div id="project4" class="project-container">
@@ -179,8 +183,10 @@
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
+            <div class="button-container">
             <button>Live</button>
             <button>Github</button>
+          </div>
           </div>
         </div>
       </section>
