added html to contact section

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <section id="contact">
         <h2>Contact</h2>
         <hr class="divider">
-        <p>Get in touch!</p>
+        <p>Get in touch if you're interested in working with me!</p>
         <div class="contact-links">
           <a href="" target="_blank" class="btn contact-details"
             ><i class="fa fa-slack"></i> <br>Slack</a
