changed project tech stack container class

--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
           </p>
           </div>
           <div class="project-img-container">
+            
             <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
-            <div class="project-icon">
+            <div class="project-icon-right">
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
-            </div>
+             </div> 
             <div class="button-container">
             <button>Live</button>
             <button>Github</button>
@@ -135,7 +136,7 @@
           </div>
           <div class="project-img-container">
             <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
-            <div class="project-icon">
+            <div class="project-icon-right">
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
@@ -157,7 +158,7 @@
         </div>
           <div class="project-img-container">
             <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
-            <div class="project-icon">
+            <div class="project-icon-right">
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
@@ -179,7 +180,7 @@
           </div>
           <div class="project-img-container">
             <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
-            <div class="project-icon">
+            <div class="project-icon-right">
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
@@ -187,6 +188,7 @@
             <button>Live</button>
             <button>Github</button>
           </div>
+          
           </div>
         </div>
       </section>
