added 'io' logo to portfol in h3 tag of projects section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <section id="projects">
         <h2>Portfolio</h2>
         <hr class="divider">
-        <h3>Here you can see some of the projects I have been working on:</h3>
+        <h3>Here you can see my portfol<span><img id="io-icon" src="/images/favicon.png" alt="IO Academy Logo"></span> of projects I have worked on:</h3>
         <div id="project1" class="project-container">
           <div class="project-content2">
           <h3>Project 1</h3>
