changed html of footer

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <hr class="divider">
         <p>Get in touch if you're interested in working with me!</p>
         <div class="contact-links">
-          <a href="" target="_blank" class="btn contact-details"
+          <a href="#" target="_blank" class="btn contact-details"
             ><i class="fa fa-slack"></i> <br>Slack</a
           >
           <a
@@ -221,7 +221,7 @@
         </div>
       </section>
 
-      <footer>&copy; Adam Young 2023</footer>
+      <footer>&copy; Copyright 2023. Made by <strong>Adam Young</strong></footer>
     </body>
   </div>
 </html>
