added dead links for live buttons and my github profile for github buttons

--- a/index.html
+++ b/index.html
@@ -119,8 +119,12 @@
               <i class="fa fa-css3 project-icon fa-lg"></i>
              </div> 
             <div class="button-container">
+              <a href="#" target="_blank">
             <button>Live</button>
+          </a>
+          <a href="https://github.com/youngy247" target="_blank">
             <button>Github</button>
+          </a>
             </div>
           </div>
         </div>
@@ -141,8 +145,12 @@
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
             <div class="button-container">
+              <a href="#" target="_blank">
             <button>Live</button>
+          </a>
+          <a href="https://github.com/youngy247" target="_blank">
             <button>Github</button>
+          </a>
           </div>
           </div>
         </div>
@@ -163,8 +171,12 @@
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
             <div class="button-container">
+              <a href="#" target="_blank">
             <button>Live</button>
+          </a>
+          <a href="https://github.com/youngy247" target="_blank">
             <button>Github</button>
+          </a>
           </div>
           </div>
         </div>
@@ -185,8 +197,12 @@
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
             <div class="button-container">
+              <a href="#" target="_blank">
             <button>Live</button>
+          </a>
+          <a href="https://github.com/youngy247" target="_blank">
             <button>Github</button>
+          </a>
           </div>
           
           </div>
