--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             class="btn contact-details"
             ><i class="fa fa-github"></i> <br>GitHub</a
           >
-          <a href="#" target="_blank" class="btn contact-details"
+          <a href="https://www.linkedin.com/in/adam-young-684319203/" target="_blank" class="btn contact-details"
             ><i class="fa fa-linkedin"></i> <br>LinkedIn</a
           >
           <a
