moved the main-grid div tag to inside of the body

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- <script defer src="js/index.js"></script> -->
   </head>
-  <div id="main-grid">
+  
     <header>
       <nav class="navbar">
         <a href="#welcome">
@@ -55,6 +55,7 @@
       </nav>
     </header>
     <body>
+      <div id="main-grid">
       <section id="welcome">
         <div class="hero-image">
           <div class="hero-text">
@@ -112,12 +113,15 @@
           </p>
           </div>
           <div class="project-img-container">
-            
-            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
             <div class="project-icon-right">
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
              </div> 
+            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
+            <!-- <div class="project-icon-right">
+              <i class="fa fa-html5 project-icon fa-lg"></i>
+              <i class="fa fa-css3 project-icon fa-lg"></i>
+             </div>  -->
             <div class="button-container">
               <a href="#" target="_blank">
             <button>Live</button>
@@ -165,11 +169,15 @@
           </p>
         </div>
           <div class="project-img-container">
-            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
             <div class="project-icon-right">
               <i class="fa fa-html5 project-icon fa-lg"></i>
               <i class="fa fa-css3 project-icon fa-lg"></i>
             </div>
+            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
+            <!-- <div class="project-icon-right">
+              <i class="fa fa-html5 project-icon fa-lg"></i>
+              <i class="fa fa-css3 project-icon fa-lg"></i>
+            </div> -->
             <div class="button-container">
               <a href="#" target="_blank">
             <button>Live</button>
