add fa-lg to all project icons

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="project-icon-container">
               <i class="fa-brands fa-html5 project-icon fa-lg"></i>
               <i class="fa-brands fa-css3 project-icon fa-lg"></i>
-              <i class="fa-brands fa-php"></i>
+              <i class="fa-brands fa-php fa-lg"></i>
              </div> 
             <div class="button-container">
               <a href="#" target="_blank">
@@ -150,8 +150,8 @@
             <div class="project-icon-container">
               <i class="fa-brands fa-html5 project-icon fa-lg"></i>
               <i class="fa-brands fa-css3 project-icon fa-lg"></i>
-              <i class="fa-brands fa-square-js"></i>
-              <i class="fa-brands fa-php"></i>
+              <i class="fa-brands fa-square-js fa-lg"></i>
+              <i class="fa-brands fa-php fa-lg"></i>
             </div>
             <div class="button-container">
               <a href="#" target="_blank">
@@ -183,9 +183,9 @@
             <div class="project-icon-container">
               <i class="fa-brands fa-html5 project-icon fa-lg"></i>
               <i class="fa-brands fa-css3 project-icon fa-lg"></i>
-              <i class="fa-brands fa-js"></i>
-              <i class="fa-brands fa-bootstrap"></i>
-              <i class="fa-brands fa-mdb"></i>
+              <i class="fa-brands fa-js fa-lg"></i>
+              <i class="fa-brands fa-bootstrap fa-lg"></i>
+              <i class="fa-brands fa-mdb fa-lg"></i>
             </div> 
             <div class="button-container">
               <a href="#" target="_blank">
@@ -213,9 +213,9 @@
               
               <i class="fa-brands fa-html5 project-icon fa-lg"></i>
               <i class="fa-brands fa-css3 project-icon fa-lg"></i>
-              <i class="fa-brands fa-js"></i>
-              <i class="fa-brands fa-react"></i>
-              <i class="fa-brands fa-node-js"></i>
+              <i class="fa-brands fa-js fa-lg"></i>
+              <i class="fa-brands fa-react fa-lg"></i>
+              <i class="fa-brands fa-node-js fa-lg"></i>
             </div>
             <div class="button-container">
               <a href="#" target="_blank">
