added free-code-camp screenshot

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </p>
           </div>
           <div class="about-img-container">
-          <img class="about-img1" src="images/favicon.png" alt="about image 1 here"/>
+          <img class="about-img1" src="images/free-code-camp.png" alt="about image 1 here"/>
         </div>
         </div>
         <div class="about-container">
