debugged images src's

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <section id="projects">
         <h2>Portfolio</h2>
         <hr class="divider">
-        <h3>Here you can see my portfol<span><img id="io-icon" src="/images/favicon.png" alt="IO Academy Logo"></span> of projects I have worked on:</h3>
+        <h3>Here you can see my portfol<span><img id="io-icon" src="images/favicon.png" alt="IO Academy Logo"></span> of projects I have worked on:</h3>
         <div id="project1" class="project-container">
           <div class="project-content2">
           <h3>Project 1</h3>
@@ -115,7 +115,7 @@
           </p>
           </div>
           <div class="project-img-container">
-            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 1" />
+            <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 1" />
             <div class="project-icon-container">
               <i class="fa-brands fa-html5 project-icon fa-lg"></i>
               <i class="fa-brands fa-css3 project-icon fa-lg"></i>
@@ -142,7 +142,7 @@
           </p>
           </div>
           <div class="project-img-container">
-            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 2" />
+            <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 2" />
             <div class="project-icon-container">
               <i class="fa-brands fa-html5 project-icon fa-lg"></i>
               <i class="fa-brands fa-css3 project-icon fa-lg"></i>
@@ -170,7 +170,7 @@
           </p>
         </div>
           <div class="project-img-container">
-            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 3" />
+            <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 3" />
             <div class="project-icon-container">
               <i class="fa-brands fa-html5 project-icon fa-lg"></i>
               <i class="fa-brands fa-css3 project-icon fa-lg"></i>
@@ -199,7 +199,7 @@
           </p>
           </div>
           <div class="project-img-container">
-            <img class="project-img" src="/images/pexels-pixabay-270360.jpg" alt="project 4" />
+            <img class="project-img" src="images/pexels-pixabay-270360.jpg" alt="project 4" />
             <div class="project-icon-container">
               
               <i class="fa-brands fa-html5 project-icon fa-lg"></i>
