changed about picture 2

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </p>
           </div>
           <div class="about-img-container" id="real-photo">
-          <img class="img-top" src="images/favicon.png" alt="about image 2 here" />
+          <img class="img-top" src="images/example-pic2.jpg" alt="about image 2 here" />
           
           </div>
         </div>
